# yices2-sys

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  build.sh
src/: lib.rs
